# cw-icfpc-2017

./: .babelrc  .editorconfig  .eslintignore  .eslintrc  .flowconfig  .gitignore  .travis.yml  CMakeLists.txt  Dijkstra.cpp  LICENSE  Makefile  README  README.md  State.cpp  State.h  buildvm.sh  ideas.txt  install  local_runner.cpp  main.cpp  package-lock.json  package.json  runvm.sh  submission.sh  test.cpp
__tests__/: main.test.js
examples/: oxford.json  random_sparse.txt  setup_request1.txt  setup_request2.txt
flow-typed/npm/: jest_v19.x.x.js
local_runner/: local_runner.cpp
model/: Dijkstra.cpp  Dijkstra.h  Empire.cpp  Empire.h  GameState.cpp  GameState.h  Solver.cpp  Solver.h
old/: icfp-19902dd7-1ef6-43c8-8ddd-17d67806316f.tar.gz_3xnu
punter/: OfflineProtocol.cpp  OfflineProtocol.h  punter.cpp
punter2/: punter2.cpp
solver/: Solver.cpp  Solver.h
src/: main.js
tests/: OfflineProtocolTest.cpp  SolverTests.cpp  TestGameState.cpp  tests-dijkstra.cpp  tests-main.cpp
visualiser/: README.md  helpers.js  log_input.txt  package-lock.json  package.json  socket_server.js  static_server.js
visualiser/web/: index.html  messageQueue.js  puntfx.js  viewer.js
